src/objects/Gym_Visits__c.object
<CustomObject>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gym Visits</relationshipLabel>
        <relationshipName>Gym_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrainerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gym Visits (Contact)</relationshipLabel>
        <relationshipName>Gym_Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gym Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gym Visits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gym Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>